Fix body and infopanel overflow

--- a/assets/radar.css
+++ b/assets/radar.css
@@ -30,6 +30,7 @@ html, body {
     padding: 0;
     background-color: var(--dark-background-color);
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 #map {
@@ -163,6 +164,7 @@ i.material-icons:before{display:none;}
     padding: 0px;
     padding-top: env(safe-area-inset-top);
     padding-left: env(safe-area-inset-left);
+    overflow-y: scroll;
 }
 
 .infoItem {
